// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<View /> 1`] = `
<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View as='button'>Button</View> 1`] = `
<div>
  <button
    class="emotion-0"
  >
    Button
  </button>
</div>
`;

exports[`<View backgroundImageUrl='https://foo/bar.jpg' /> 1`] = `
.emotion-0 {
  background-image: url("https://foo/bar.jpg");
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View isHidden={false} /> 1`] = `
<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View isHidden={true} /> 1`] = `
.emotion-0 {
  display: none;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View isMounted={false} /> 1`] = `<div />`;

exports[`<View isMounted={true} /> 1`] = `
<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View margin={[10, 10, 10, 10]} /> 1`] = `
.emotion-0 {
  margin: 10px 10px 10px 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View margin={[10, 10]} /> 1`] = `
.emotion-0 {
  margin: 10px 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View margin={[10]} /> 1`] = `
.emotion-0 {
  margin: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View margin={10} /> 1`] = `
.emotion-0 {
  margin: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View marginBottom={10} /> 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View marginLeft={10} /> 1`] = `
.emotion-0 {
  margin-left: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View marginRight={10} /> 1`] = `
.emotion-0 {
  margin-right: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View marginTop={10} /> 1`] = `
.emotion-0 {
  margin-top: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View padding={[10, 10, 10, 10]} /> 1`] = `
.emotion-0 {
  padding: 10px 10px 10px 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View padding={[10, 10]} /> 1`] = `
.emotion-0 {
  padding: 10px 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View padding={[10]} /> 1`] = `
.emotion-0 {
  padding: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View padding={10} /> 1`] = `
.emotion-0 {
  padding: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View paddingBottom={10} /> 1`] = `
.emotion-0 {
  padding-bottom: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View paddingLeft={10} /> 1`] = `
.emotion-0 {
  padding-left: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View paddingRight={10} /> 1`] = `
.emotion-0 {
  padding-right: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View paddingTop={10} /> 1`] = `
.emotion-0 {
  padding-top: 10px;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View position='absolute' /> 1`] = `
.emotion-0 {
  position: absolute;
}

<div>
  <div
    class="emotion-0"
  />
</div>
`;

exports[`<View><View></View></View> 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="emotion-0"
    />
  </div>
</div>
`;
